--- a/product/安全服务/态势感知/操作指南/资产中心/查看和处理漏洞.md
+++ b/product/安全服务/态势感知/操作指南/资产中心/查看和处理漏洞.md
@@ -1,84 +1,42 @@
+合规管理功能提供云上自动化持续合规评估能力，可根据等级保护等合规标准要求，对您在云上的合规风险进行评估，并为您提供相应的风险处置建议。
 ## 前提条件
-如需查看或处理漏洞，需已开通 [主机安全](https://buy.cloud.tencent.com/yunjing) 及 [漏洞扫描服务](https://buy.cloud.tencent.com/vss)。
+合规管理功能目前正在试用中，已 [开通安全运营高级版](https://buy.cloud.tencent.com/soc) 的用户可获得试用资格。
+
 ## 操作步骤
-### 待处理漏洞看板
-漏洞看板是当前待处理漏洞的信息汇总，漏洞列表是漏洞的明细数据。
-1. 登录 [安全运营中心控制台](https://console.cloud.tencent.com/ssav2/vulner)，在左侧导航栏，单击【漏洞管理】，进入漏洞管理页面。
-2. 在漏洞管理页面，单击【待处理漏洞看板】，进入待处理漏洞看板页面。
-3. 在待处理漏洞看板可查某一类漏洞的名称、CVE 编号、漏洞等级等信息。
-	- **搜索**
-在待处理漏洞看板页面上方，输入漏洞名称、CVE 编号或筛选漏洞类型、风险等级定位漏洞。
-![](https://main.qcloudimg.com/raw/9b83993accbf554cc97632b79ba3d9b3.png)
-	- **查看待处理漏洞详情**
-在待处理漏洞看板，单击【漏洞名称】可打开漏洞详情页查看该漏洞的基础信息和资产信息。单击【未修复资产数】可打开漏洞列表页查看未修复的资产记录。
-![](https://main.qcloudimg.com/raw/1b6b921808ef70d2408329165582f2ef.png)
-在漏洞详情页右上角单击<img src= "https://main.qcloudimg.com/raw/5d6f28083f0484b4f0cb46b9c32717b5.png" style="margin:0;">按钮，可导出漏洞详情和受影响资产列表。
-![](https://main.qcloudimg.com/raw/38bf87dee7ae3250709a237ee9d8418d.png)
-
-### 漏洞列表
-1. 登录 [安全运营中心控制台](https://console.cloud.tencent.com/ssav2/vulner)，在左侧导航栏，单击【漏洞管理】，进入漏洞管理页面。
-2. 在漏洞管理页面，单击【漏洞列表】，进入漏洞列表页面。
-3. 在漏洞列表页，可查看存在漏洞资产数、待处理漏洞概况、修复中漏洞概况等明细列表。在漏洞明细列表中，可进行导出、搜索、查看详情等操作。
-	- **漏洞概况汇总**
-		- **存在漏洞资产数**：展示存在漏洞的资产总数。
-		- **待处理漏洞概况**：展示了状态为待处理的漏洞总数、高危漏洞数、中危漏洞数、低危漏洞数。
-		- **修复中漏洞概况**：展示了状态为修复中的漏洞总数、高危漏洞数、中危漏洞数、低危漏洞数。
-		- **已处理漏洞概况**：展示了状态为已处理的漏洞总数、高危漏洞数、中危漏洞数、低危漏洞数。
-	- **待处理漏洞趋势图**
-待处理漏洞趋势图展示了近24小时、近7天、近30天、近90天的待处理漏洞趋势。
-![](https://main.qcloudimg.com/raw/b2788c6a0fb315f297a7a86374a5df2d.png)
-	- **搜索**
-在漏洞明细列表页面上方，可筛选漏洞类型、风险等级、处理状态、最近检测时间或输入资产名称、资产 ID 定位漏洞。
-![](https://main.qcloudimg.com/raw/64830d669a174143efb8f37a22d3aba1.png)
-	- **全部确认处理**
-所有的漏洞均根据修复方案修复后，可在列表左上角单击【全部确认处理】，将处理状态为“待处理”和“修复中”的漏洞变更为已处理。
-	- **状态变更**
-		- **方式1**：在漏洞明细列表页，勾选目标漏洞，鼠标悬浮列表上方【状态变更】并单击状态操作，可批量变更状态。
-		- **方式2**：在漏洞明细列表页，鼠标悬浮目标漏洞右侧操作栏的【状态变更】并单击状态操作，可变更状态。
->?
->- 确认处理：根据详情页的漏洞描述和修复方案处置完成后，可确认处理漏洞。
->- 标为修复中：根据详情页的漏洞描述和修复方案正在进行处置时，可将漏洞标为修复中。
->- 忽略检测：忽略时可根据实际场景填写备注。忽略后，主机安全或漏洞扫描服务将不再对所选漏洞进行检测。
+1. 登录 [安全运营中心控制台](https://console.cloud.tencent.com/ssav2/compliance)，在左侧导航栏，单击【合规管理】，进入合规管理页面。
+2. 如您未创建服务预设角色并授予安全运营中心相关权限，在合规管理页面，请单击【前往访问管理】，进入角色管理页面，单击【同意授权】，如您已授权请跳过此步。
+3. 在合规管理页面上方，可以查看合规概览和检查项合规情况占比。
+![](https://main.qcloudimg.com/raw/93f9338e74ba7d86e2ea637f82c34033.png)
+ - **合规概览**：展示了检查项总数及不合规个数、配置项总数及不通过个数（红色字体为合规检查不通过的统计，需重点关注）。
+ - **检查项合规情况占比**：展示了安全区域边界、安全物理环境和安全计算环境的合规情况占比（绿色表示检查通过的比例，红色表示检查不通过的比例），将鼠标悬浮在统计图中可查看具体数据。
+4. 在合规管理页面下方，可以查看合规管理检查项列表。合规管理检查项列表展示了您在合规管理的所有检查项，并可以进行相应操作。
+	- **检查合规管理检查项**
+		- **方式1**：在合规管理检查项列表左上方，单击【全面检查】，可批量对所有检查项进行检测。
+		![](https://main.qcloudimg.com/raw/b40b42a9eb9048bf26ca675c2359b881.png)
+		- **方式2 **：在合规管理检查项列表上方，单击【自动检查设置】，弹出检查设置窗口，选择“自动检查周期”和“自动检查时间”，自动检查周期可多选，自动检查时间单选。选择完成后，单击【确定】，即可在设置时间自动进行检查。
+>?受负载均衡影响，自动检查时间将在所选的时间段内的某个时间点，自动进行检查。
 >
-![](https://main.qcloudimg.com/raw/0662b319c9d33cebbad4fb1a17cf610e.png)
-	- **重新检测**
-		- **方式1**：在漏洞明细列表页，勾选目标漏洞，单击列表上方【重新检测】，可批量重新检测。
-		- **方式2**：在漏洞明细列表页，单击目标漏洞右侧操作栏的【重新检测】，可重新检测。
->?待处理和修复中的漏洞支持重新检测。
->
-![](https://main.qcloudimg.com/raw/2e0567295ee4e0d3f162ed8800b37850.png)
-	- **忽略记录**
-在漏洞管理页，单击“忽略记录”可查看已忽略检测的记录，在忽略记录列表页可取消忽略。取消忽略后将恢复对该漏洞的该资产的检测。
- - 方式1：在忽略记录列表页，勾选目标漏洞，单击列表上方【取消忽略】，可批量取消忽略记录。
- - 方式2：在忽略记录列表页，单击目标漏洞右侧操作栏的【取消忽略】，可取消对应的忽略记录。
-![](https://main.qcloudimg.com/raw/5d1c7416b6e2c9930f96cd0fac75a819.png)
-	- **漏洞详情**
-	在漏洞明细列表，单击目标漏洞右侧操作栏的【查看详情】，进入详情页，可查看该漏洞的基础信息。
-	- **漏洞同步**
-在漏洞明细列表右上角，单击刷新<img src= "https://main.qcloudimg.com/raw/bc8e502faa0460899d1c97b54a510bf1.png" style="margin:0;">按钮，即可与主机安全同步漏洞。
-	- **导出**
-在漏洞明细列表右上角，单击导出<img src= "https://main.qcloudimg.com/raw/5d6f28083f0484b4f0cb46b9c32717b5.png" style="margin:0;">按钮，默认导出列表的全部数据， 也可以选择勾选导出部分数据。
->?勾选列表上方“全选框”，则为选中当前页全部数据。
-	- **切换全屏模式**
-在漏洞明细列表右上角，单击<img src= "https://main.qcloudimg.com/raw/e7325c2591be9e720aed26c41ccb2ab1.png" style="margin:0;">切换全屏模式按钮,即切换是否全屏显示。
-
-### 资产漏洞
-1. 登录 [安全运营中心控制台](https://console.cloud.tencent.com/ssav2/vulner)，在左侧导航栏，单击【漏洞管理】，进入漏洞管理页面。
-2. 在漏洞管理页面，单击【资产漏洞】，进入主机漏洞列表。
-3. 在主机漏洞列表，可查看漏洞详情信息，并支持漏洞扫描功能。
-![](https://main.qcloudimg.com/raw/72fca63fdf99f2ba9a16a35578b91212.png)
-	- 单击“资产 ID”，进入详情页，可查看该资产详细信息。
-	- 单击“漏洞（主机安全）”的风险个数，可查看该资产涉及来自主机安全的漏洞数据。
-	- 单击“漏洞（扫描服务）”的风险个数，可查看该资产涉及来自漏洞扫描服务的漏洞数据。
-	- 单击扫描，对该资产通过漏洞扫描服务进行扫描。
-	>?未添加表示您未在漏洞扫描服务控制台将该主机添加到 [资产管理](https://console.cloud.tencent.com/vss/assets/host) 的主机列表中。
-	>
-	![](https://main.qcloudimg.com/raw/a02a116198215fb7d4ae5e7f129720f3.png)
-4.  在漏洞管理页面，单击【网站漏洞】，进入网站漏洞列表。
-	- **搜索**：在网站漏洞列表页，可筛选资产归属、认证状态或输入资产名称进行搜索。
-	- **扫描**：单击“最近一次扫描”的风险个数，可查看该资产来自漏洞扫描服务的漏洞数据。单击【扫描】，可对该资产通过漏洞扫描服务进行扫描。
-	![](https://main.qcloudimg.com/raw/3072c3b51d2d8db07fce3295b8904d01.png)
-5.  在漏洞管理页面，单击【API 漏洞】，进入 API 漏洞列表。
- - **搜索**：在 API 漏洞列表页，可输入 API 名称进行搜索。
- - **扫描**：单击“最近一次扫描”的风险个数，可查看该资产来自漏洞扫描服务的漏洞数据。单击【扫描】，可对该资产通过漏洞扫描服务进行扫描。
-![](https://main.qcloudimg.com/raw/658a7b012a0edd437b15f4058075ccb2.png)
+	![](https://main.qcloudimg.com/raw/cca590bf4dd2122ca000e45b37500341.png)
+	- **筛选/搜索**
+	在合规管理检查项列表右上方，即可按照检查项分类或检查项结果进行筛选，也可以输入检查项名称的关键词进行搜索。
+	![](https://main.qcloudimg.com/raw/d6f2542e265736e7ac719e5d46b64aae.png)
+5. 合规检查完毕，会按照**不合规检查项、合规检查项和暂不支持检查**的检查结果排序列出所有合规检查项的情况。展开检查项目，即可查看对应的产品选购和配置项详情。
+ - **不合规检查项**
+展开合规检查不通过的项目，进入产品选购页面，可以查看该检查项对应的安全产品选购情况；进入配置项页面，列出所有检查配置项的通过和未通过情况。
+    - **产品选购情况**
+      - 已购买状态：单击【去体验】即可进入该产品对应的主页面（例如：主机安全产品的主页面是安全概览），再次进行手动操作。
+      - 未购买状态：除了体验对应的安全产品，还可以单击【去购买】进行产品选购。
+    ![](https://main.qcloudimg.com/raw/0c2a0cb419f0f0aeafbf323402b005a6.png)
+	- **配置项情况**
+      - 查看配置项详情：单击配置项名称，可以查看配置项的基本信息以及对应的所有资产检查情况，可进行处置、忽略/取消忽略、继续检查等操作。
+      - 检查配置项：针对该项再次进行合规检查。
+      - 忽略配置项：再次检查时，将不再对该项进行检查，已忽略的检查项将移动至列表最后。
+      ![](https://main.qcloudimg.com/raw/73df21c698c9b87accfbacdacf909c35.png)
+			![](https://main.qcloudimg.com/raw/11d1f7833f5cedf43c2414b27ef41072.png)
+ - **合规检查项**
+ 与不合规检查项的展开页面基本一致。
+ ![](https://main.qcloudimg.com/raw/9b677558ea74de25e4ebdaeacd532254.png)
+ - **暂不支持检查**
+ ![](https://main.qcloudimg.com/raw/317f016cbd93182b3056bd11cebaa2e0.png)
+>? 若在列表上方勾选“全选框”，则为选中当页全部数据。
+ 
