--- a/product/计算与网络/无服务器云函数/最佳实践/使用 API 网关触发器快速构建文字识别小工具/前后台对接.md
+++ b/product/计算与网络/无服务器云函数/最佳实践/使用 API 网关触发器快速构建文字识别小工具/前后台对接.md
@@ -13,9 +13,9 @@
 ### 修改 URL 地址
 
 1. 使用编辑器打开已下载的 HTML 文件。
-> 如果没有专业的编辑器，可以通过文本方式打开。
+>? 如果没有专业的编辑器，可以通过文本方式打开。
 2. 将下图中的 url 参数修改为 [函数部署](https://cloud.tencent.com/document/product/583/30590) 中生成的域名。
-![](https://main.qcloudimg.com/raw/312b5e14adc5935eb31aa8a27f5e0aa7.png)
+![](https://main.qcloudimg.com/raw/9f6140ad02cb4167c80e2d1cd2d1467b.png)
 
 ### 体验效果
 
