--- a/product/域名与网站/云证通/产品简介/数字化测评规则.md
+++ b/product/域名与网站/云证通/产品简介/数字化测评规则.md
@@ -1,1 +1,45 @@
+数字资产测评将针对用户的数字资产数量进行全方位扫描，根据云证通已支持数字资产类型（资质证照、知识产权与数字证书等）的完整性与多样性、对照非数字资产类型（域名、解析等其他腾讯云的云资源）的使用频次、限时任务的完成积极程度等一系列数据指标表现情况，通过评分模型计算出用户的数字化测评分数，一定程度上具象化您的数字资产水平。
+
+## 数字资产评分等级说明
+数字资产评分按照由低到高的顺序，分为以下四个评分等级：
+
+<table>
+<thead>
+  <tr>
+    <th><br>等级</th>
+    <th><br>数字化资产测评分数要求</th>
+    <th><br>等级说明</th>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <td><br>较低</td>
+    <td><br>最终得分 &lt; 80分</td>
+    <td><br>数字资产类型的内容缺失度较高，用户对数字资产的管理概念较弱，对云资源的使用缺少一定的规划，数字化水平较低，有极大的数字化提升空间。</td>
+  </tr>
+  <tr>
+    <td><br>达标</td>
+    <td><br>80分 &lt;= 最终得分 &gt; 100分</td>
+    <td><br>数字资产类型的内容完整度一般，用户具有资质证照的基本管理概念，对云资源的使用频次一般，数字化水平达标，有较大的数字化提升空间。</td>
+  </tr>
+  <tr>
+    <td><br>良好</td>
+    <td><br>100分 &lt;= 最终得分 &lt; 200分</td>
+    <td><br>数字资产类型的内容完整度较好，用户具备较为丰富的数据资产，对云资源的使用有梯度规划，数字化水平良好，数字化水平可位列行业第二梯队。</td>
+  </tr>
+  <tr>
+    <td><br>优秀</td>
+    <td><br>最终得分 	&gt;= 200分</td>
+    <td><br>数字资产类型的内容完整度极佳，用户具备丰富的、全面的数据资产，对云资源的使用有长远规划，数字化水平优秀，数字化水平可位列行业前茅，具有行业借鉴能力。</td>
+  </tr>
+</tbody>
+</table>
+
+## 提升数字资产评分结果
+您可通过以下方式进行提升：
+- **补充更多数字资产信息**：尽量保证重要资产的丰富度和完整度，例如：确保上传的资产可覆盖到各子类目、补齐每个子类目的资产数量。
+- **云资源使用账号**：使用腾讯云主账号进行测评，归整云资源的使用规划，集中在一个腾讯云账号中。
+- **积极参加限时活动**：积极参与限时活动，可点亮特殊加分。
+
+
 
