--- a/product/管理与支持/账号相关/实名认证/管理认证信息/变更企业名称.md
+++ b/product/管理与支持/账号相关/实名认证/管理认证信息/变更企业名称.md
@@ -10,20 +10,18 @@
 
 ## 操作步骤
 
-1. 登录腾讯云控制台，进入 [账号信息](https://console.cloud.tencent.com/developer) 页面。
-2. 在“基本信息”栏中，找到认证状态，单击【查看或修改认证】。
-![](https://main.qcloudimg.com/raw/caab4471ce0ae82333adf0dbc2a8c524.png)
-3. 在认证信息页面，单击【修改认证主体】。
+1. 登录腾讯云控制台，进入 [实名认证](https://console.cloud.tencent.com/developer/auth) 页面。
+2. 在“您已完成企业实名认证”栏中，选择**修改认证主体**。
 ![](https://main.qcloudimg.com/raw/b00a89c9791a66f5d86cc0a1fdf6c223.png)
-4. 在修改企业实名认证页面，单击【开始修改】。
+3. 在修改企业实名认证页面，单击**开始修改**。
 ![](https://main.qcloudimg.com/raw/21997f0ffbeaaca4d20a3a45281c3fb6.png)
-5. 在选择变更类型页面，选择【变更企业名称（企业机构代码不变）】，填写变更后实名信息，单击【下一步】。
+4. 在选择变更类型页面，选择**变更企业名称（企业机构代码不变）**，填写变更后实名信息，单击**下一步**。
 ![](https://main.qcloudimg.com/raw/9fecc9f764f36a05d7711a343bbfc83f.png)
-6. 在提交证明材料页面，上传变更申请表，上传工商局或事业单位上级主管单位的变更证明和现企业营业执照，单击【下一步】。
+5. 在提交证明材料页面，上传变更申请表，上传工商局或事业单位上级主管单位的变更证明和现企业营业执照，单击**下一步**。
 ![](https://main.qcloudimg.com/raw/109e2ea018023dcd23fdb5c8fc423213.png)
  - 变更申请表：下载变更申请表模板，填写完成后上传文件。
  - 新企业名称相关材料：上传工商局或事业单位上级主管单位的变更证明和营业执照彩色证明照。
-7. 等待审核结果。
+6. 等待审核结果。
 审核结果将于**1个工作日**以邮件、短信和站内信的方式通知您。
  - 审核通过，即完成变更。
  - 审核不通过，请根据页面提示，修改认证证明材料并再次提交审核。
