--- a/product/管理与支持/账号相关/实名认证/管理认证信息/变更为个人实名认证.md
+++ b/product/管理与支持/账号相关/实名认证/管理认证信息/变更为个人实名认证.md
@@ -1,5 +1,5 @@
 ## 操作场景
-本文指导您如何为已完成企业实名认证的腾讯云账号变更为个人实名认证。实名认证信息决定账号归属。账号完成实名认证后，建议您不要随意修改认证的信息。
+本文指导您如何为已完成企业实名认证的腾讯云账号变更为个人实名认证。实名认证信息决定账号归属，账号完成实名认证后，建议您不要随意修改认证的信息。
 
 ## 注意事项
 
@@ -11,24 +11,22 @@
 
 ## 操作步骤
 
-1. 登录腾讯云控制台，进入 [账号信息](https://console.cloud.tencent.com/developer) 页面。
-2. 在“基本信息”栏中，找到认证状态，单击【查看或修改认证】。
-![](https://main.qcloudimg.com/raw/caab4471ce0ae82333adf0dbc2a8c524.png)
-3. 在认证信息页面，单击【修改认证主体】。
+1. 登录腾讯云控制台，进入 [实名认证](https://console.cloud.tencent.com/developer/auth) 页面。
+2. 在“您已完成企业实名认证”栏中，选择**修改认证主体**。
 ![](https://main.qcloudimg.com/raw/b00a89c9791a66f5d86cc0a1fdf6c223.png)
-4. 在修改企业实名认证页面，单击【开始修改】。
+3. 在修改企业实名认证页面，单击**开始修改**。
 ![](https://main.qcloudimg.com/raw/21997f0ffbeaaca4d20a3a45281c3fb6.png)
-5. 在选择变更类型页面，选择【变更为个人实名认证】，填写变更后实名信息，单击【下一步】。
+4. 在选择变更类型页面，选择**变更为个人实名认证**，填写变更后实名信息，单击**下一步**。
 ![](https://main.qcloudimg.com/raw/9e5f06170a93ffb293301cf635eac1e4.png)
-6. 在提交证明材料页面，上传如下材料。
+5. 在提交证明材料页面，上传如下材料。
  - 变更申请表：下载变更申请表模板，填写完成后上传文件。
  ![](https://main.qcloudimg.com/raw/e7eeeae0dab3fa7c0e080062689e9b1c.png)
  - 原实名主体：上传变更前企业的营业执照彩色证明照（原企业已注销营业执照的情况，可上传工商局出具的注销证明）、法人身份证国徽面彩色照和法人身份证人像面彩色照。
  ![](https://main.qcloudimg.com/raw/6f510c498bf536ad62589c2630f4a81c.png)
  - 新实名主体：上传个人手持身份证国徽面彩色照和个人手持身份证人像面彩色照。
  ![](https://main.qcloudimg.com/raw/d190e2c62b3c74d566eae2053e8f1ae5.png)
-7. 单击【下一步】。
-8. 等待审核结果。
+6. 单击**下一步**。
+7. 等待审核结果。
 审核结果将于**1个工作日**以邮件、短信和站内信的方式通知您。
  - 审核通过，即完成变更。
  - 审核不通过，请根据页面提示，修改认证证明材料并再次提交审核。
