--- a/product/安全服务/态势感知/操作指南/合规管理.md
+++ b/product/安全服务/态势感知/操作指南/合规管理.md
@@ -13,7 +13,7 @@
 	- **检查合规管理检查项**
 		- **方式1**：在合规管理检查项列表左上方，单击【全面检查】，可批量对所有检查项进行检测。
 		![](https://main.qcloudimg.com/raw/b40b42a9eb9048bf26ca675c2359b881.png)
-		- **方式2 **：在合规管理检查项列表上方，单击【自动检查设置】，弹出检查设置窗口，选择“自动检查周期”和“自动检查时间”，自动检查周期可多选，自动检查时间单选。选择完成后，单击【确定】，即可在设置时间自动进行检查。
+		- **方式2**：在合规管理检查项列表上方，单击【自动检查设置】，弹出检查设置窗口，选择“自动检查周期”和“自动检查时间”，自动检查周期可多选，自动检查时间单选。选择完成后，单击【确定】，即可在设置时间自动进行检查。
 >?受负载均衡影响，自动检查时间将在所选的时间段内的某个时间点，自动进行检查。
 >
 	![](https://main.qcloudimg.com/raw/cca590bf4dd2122ca000e45b37500341.png)
@@ -37,6 +37,7 @@
  与不合规检查项的展开页面基本一致。
  ![](https://main.qcloudimg.com/raw/9b677558ea74de25e4ebdaeacd532254.png)
  - **暂不支持检查**
+ 暂时无需关注此类检查项。
  ![](https://main.qcloudimg.com/raw/317f016cbd93182b3056bd11cebaa2e0.png)
 >? 若在列表上方勾选“全选框”，则为选中当页全部数据。
  
