--- a/product/物联网/物联使能/服务管理/物联网应用服务简介.md
+++ b/product/物联网/物联使能/服务管理/物联网应用服务简介.md
@@ -30,7 +30,7 @@
 ### 服务开通
 
 1. 登录 [物联网开发平台控制台](https://console.cloud.tencent.com/iotexplorer)，并完成 [SaaS创建](https://cloud.tencent.com/document/product/1465/58446)。
-2. 选择所创建的应用进入应用详情页，单击**服务管理** > **行业服务**查看物联网应用服务开放的行业服务。找到您需要开通的行业服务，以物联网安全保障服务为例，此时服务状态为未开通。
+2. 选择所创建的 SaaS 进入 SaaS 详情页，单击**服务管理** > **行业服务**查看物联网 SaaS 服务开放的行业服务。找到您需要开通的行业服务，以物联网安全保障服务为例，此时服务状态为未开通。
    <img src="https://main.qcloudimg.com/raw/ca61c5e2506cf92301243af6b7406c21.png" style="width: 65%;"><br>
 3. 单击**申请开通**，在申请开通服务的弹框中，选择需要开通的服务如物联网火灾安全保障服务，并填写您的相关信息。
    <img src="https://main.qcloudimg.com/raw/0c20ec3a80eb3ed219e8b4cfc8d60844.png" style=" width: 65%;"><br>
