--- a/product/物联网/物联使能/物联使能 API/物联网安全保障服务/设备与用户绑定关系推送.md
+++ b/product/物联网/物联使能/物联使能 API/物联网安全保障服务/设备与用户绑定关系推送.md
@@ -6,16 +6,16 @@
 
 ## 2. 输入参数
 
-| 名称        | 类型                                               | 必选 | 描述                                                         |
-| ----------- | -------------------------------------------------- | ---- | ------------------------------------------------------------ |
-| Action      | String                                             | 是   | 公共参数，本接口取值：ServiceBindDevice                      |
-| RequestId   | String                                             | 是   | 公共参数，唯一请求 ID，可自行生成，推荐使用 uuId。定位问题时，需提供该次请求的 RequestId |
-| AppKey      | String                                             | 是   | 公共参数，应用 AppKey ，用于标识对应的 App                   |
-| Signature   | String                                             | 是   | 公共参数，请求签名，需用户自行生成，用于校验请求的合法性     |
-| Timestamp   | Int64                                              | 是   | 公共参数，请求的 Unix 时间戳（秒级）                         |
-| Nonce       | Int                                                | 是   | 公共参数，随机正整数，与 Timestamp 联合起来，防止重放攻击    |
-| CustomerId  | String                                             | 是   | 厂商应用端的唯一用户ID                                       |
-| DeviceInfos | Array of [ServiceDeviceInfo](https://cloud.tencent.com/document/product/1465/59061#ServiceDeviceInfo) | 是   | 设备信息列表。<br/>支持推送用户与单个或批量设备的绑定关系。当用户对应多个厂商设备编号时，必须采用批量推送方式。          |
+| 名称        | 类型                                                         | 必选 | 描述                                                         |
+| ----------- | ------------------------------------------------------------ | ---- | ------------------------------------------------------------ |
+| Action      | String                                                       | 是   | 公共参数，本接口取值：ServiceBindDevice                      |
+| RequestId   | String                                                       | 是   | 公共参数，唯一请求 ID，可自行生成，推荐使用 uuId。定位问题时，需提供该次请求的 RequestId |
+| AppKey      | String                                                       | 是   | 公共参数，物联网 SaaS 的 AppKey ，用于标识对应的物联网 SaaS  |
+| Signature   | String                                                       | 是   | 公共参数，请求签名，需用户自行生成，用于校验请求的合法性     |
+| Timestamp   | Int64                                                        | 是   | 公共参数，请求的 Unix 时间戳（秒级）                         |
+| Nonce       | Int                                                          | 是   | 公共参数，随机正整数，与 Timestamp 联合起来，防止重放攻击    |
+| CustomerId  | String                                                       | 是   | 厂商应用端的唯一用户ID                                       |
+| DeviceInfos | Array of [ServiceDeviceInfo](https://cloud.tencent.com/document/product/1465/59061#ServiceDeviceInfo) | 是   | 设备信息列表。<br/>支持推送用户与单个或批量设备的绑定关系。当用户对应多个厂商设备编号时，必须采用批量推送方式。 |
 
 ## 3. 输出参数
 
