--- a/product/物联网/物联使能/物联使能 API/物联网安全保障服务/设备数据推送/设备数据上报.md
+++ b/product/物联网/物联使能/物联使能 API/物联网安全保障服务/设备数据推送/设备数据上报.md
@@ -9,12 +9,12 @@
 | ------------ | ------------------------------------------------------------ | ---- | ------------------------------------------------------------ |
 | Action       | String                                                       | 是   | 公共参数，本接口取值：ServiceReportDeviceData                |
 | RequestId    | String                                                       | 是   | 公共参数，唯一请求 ID，可自行生成，推荐使用 uuId。定位问题时，需提供该次请求的 RequestId |
-| AppKey       | String                                                       | 是   | 公共参数，应用 AppKey ，用于标识对应的 App                   |
+| AppKey       | String                                                       | 是   | 公共参数，物联网 SaaS 的 AppKey ，用于标识对应的物联网 SaaS  |
 | Signature    | String                                                       | 是   | 公共参数，请求签名，需用户自行生成，用于校验请求的合法性     |
 | Timestamp    | Int64                                                        | 是   | 公共参数，请求的 Unix 时间戳（秒级）                         |
 | Nonce        | Int                                                          | 是   | 公共参数，随机正整数，与 Timestamp 联合起来，防止重放攻击    |
 | DeviceId     | String                                                       | 是   | 在物联网开发平台创建的设备 ID，唯一标识一个设备，由 `产品 ID + "/" + 设备名称` 组合而成，例如 `ProductABC/Device001` |
-| CustomerId   | String                                                       | 是   | 厂商应用端的唯一用户 ID                                       |
+| CustomerId   | String                                                       | 是   | 厂商应用端的唯一用户 ID                                      |
 | DataCategory | String                                                       | 是   | 数据分类。<li>100：电压<li>200：温度  <li>300：电流  <li>310：漏电电流  <li>400：功率 <li>500：烟感 |
 | DataInfo     | Array of [ReportDeviceData](https://cloud.tencent.com/document/product/1465/59061#reportdevicedata) | 是   | 上报数据信息                                                 |
 
@@ -90,5 +90,5 @@ content-type: application/json
 | InvalidAction                     | Action 非法       |
 | InvalidParameterValue             | 参数非法          |
 | InvalidParameterValue.InvalidJSON | 请求格式不是 JSON |
-  
+
 
