--- a/product/物联网/物联使能/物联使能 API/物联网安全保障服务/设备数据推送/设备状态上报.md
+++ b/product/物联网/物联使能/物联使能 API/物联网安全保障服务/设备数据推送/设备状态上报.md
@@ -10,12 +10,12 @@
 | ------------ | ------ | ---- | ------------------------------------------------------------ |
 | Action       | String | 是   | 公共参数，本接口取值：ServiceReportDeviceState               |
 | RequestId    | String | 是   | 公共参数，唯一请求ID，可自行生成，推荐使用 uuId。定位问题时，需提供该次请求的 RequestId |
-| AppKey       | String | 是   | 公共参数，应用 AppKey ，用于标识对应的 App                   |
+| AppKey       | String | 是   | 公共参数，物联网 SaaS 的 AppKey ，用于标识对应的物联网 SaaS  |
 | Signature    | String | 是   | 公共参数，请求签名，需用户自行生成，用于校验请求的合法性     |
 | Timestamp    | Int64  | 是   | 公共参数，请求的 Unix 时间戳（秒级）                         |
 | Nonce        | Int    | 是   | 公共参数，随机正整数，与 Timestamp 联合起来，防止重放攻击    |
-| DeviceId     | String | 是   | 在物联网开发平台创建的设备 ID，唯一标识一个设备，由 `产品ID + "/" + 设备名称` 组合而成，例如 `ProductABC/Device001`|
-| OnlineStatus | Int    | 是   | 设备状态。<li>0：离线<li>1：在线<li>2：未知                          |
+| DeviceId     | String | 是   | 在物联网开发平台创建的设备 ID，唯一标识一个设备，由 `产品ID + "/" + 设备名称` 组合而成，例如 `ProductABC/Device001` |
+| OnlineStatus | Int    | 是   | 设备状态。<li>0：离线<li>1：在线<li>2：未知                  |
 
 ## 3. 输出参数
 
@@ -84,4 +84,4 @@ content-type: application/json
 | InvalidAction                     | Action 非法       |
 | InvalidParameterValue             | 参数非法          |
 | InvalidParameterValue.InvalidJSON | 请求格式不是 JSON |
-  
+
