--- a/product/数据库/云数据库SQL Server/产品动态.md
+++ b/product/数据库/云数据库SQL Server/产品动态.md
@@ -1,3 +1,17 @@
+## 2021年08月
+<table>
+<thead><tr><th width=20%>动态名称</th><th width=50%>动态描述</th><th width=10%>发布时间</th><th width=20%>相关文档</th></tr></thead>
+<tbody><tr>
+<td>北京六区开服	</td>
+<td>	云数据库 SQL Server 新增开放北京六区。</td>
+<td>2021-08</td>
+<td><a href="https://cloud.tencent.com/document/product/238/7520" target="_blank">地域和可用区</a></td></tr>
+<tr>
+<td>广州七区开服</td>
+<td>云数据库 SQL Server 新增开放广州七区。</td>
+<td>2021-08</td>
+<td><a href="https://cloud.tencent.com/document/product/238/7520" target="_blank">地域和可用区</a></td></tr>
+</tbody></table>
 
 ## 2021年07月
 <table>
