--- a/product/数据库/云数据库SQL Server/产品简介/地域和可用区.md
+++ b/product/数据库/云数据库SQL Server/产品简介/地域和可用区.md
@@ -2,16 +2,18 @@
 <table class="table-striped">
 <tbody><tr><th>地域</th><th>可用区</th></tr> 
 <tr>
-<td rowspan="5">华南地区（广州）<br> ap-guangzhou</td>
+<td rowspan="6">华南地区（广州）<br> ap-guangzhou</td>
 <td>广州一区（已售罄）<br> ap-guangzhou-1</td></tr>	
 <tr>
 <td>广州二区<br> ap-guangzhou-2</td></tr>
 <tr>
 <td>广州三区<br> ap-guangzhou-3</td></tr>
 <tr>
-<td>广州四区<br> ap-guangzhou-4</td></tr>
+<td>广州四区（已售罄）<br> ap-guangzhou-4</td></tr>
 <tr>
 <td>广州六区<br> ap-guangzhou-6</td></tr>
+<tr>
+<td>广州七区<br> ap-guangzhou-7</td></tr>
 <tr>
 <td rowspan="1">华南地区（深圳金融）<br>ap-shenzhen-fsi</td>
 <td>深圳金融一区（仅限金融机构和企业 <a href="https://console.cloud.tencent.com/workorder/category">提交工单</a>申请开通）<br>ap-shenzhen-fsi-1</span></td>
@@ -35,7 +37,7 @@
 <td rowspan="1">华东地区（上海金融）<br>ap-shanghai-fsi</td>
 <td>上海金融一区（仅限金融机构和企业提交工单申请开通）<br>ap-shanghai-fsi-1</td></tr>
 <tr>
-<td rowspan="6">华北地区（北京）<br>ap-beijing</td>
+<td rowspan="7">华北地区（北京）<br>ap-beijing</td>
 <td>北京一区<br>ap-beijing-1</td></tr>
 <tr>
 <td>北京二区<br>ap-beijing-2</td></tr>
@@ -45,6 +47,8 @@
 <td>北京四区<br>ap-beijing-4</td></tr>
 <tr>
 <td>北京五区<br>ap-beijing-5</td></tr>
+<tr>
+<td>北京六区<br>ap-beijing-6</td></tr>
 <tr>
 <td>北京七区<br>ap-beijing-7</td></tr>
 <tr>
