--- a/product/移动与通信/云开发低代码平台/产品动态.md
+++ b/product/移动与通信/云开发低代码平台/产品动态.md
@@ -1,3 +1,74 @@
+## 2021年08月
+
+### 企业级应用能力
+
+<table>
+<tr>
+<th width="20%">动态名称</th>
+<th width="50%">动态描述</th>
+<th width="15%">发布时间</th>
+<th width="15%">相关文档</th>
+</tr>
+<tbody>
+<tr>
+<td>新增企业工作台</td>
+<td>为了更高效的支持企业应用管理，微搭平台为用户预置了企业工作台框架，支持基于微搭创建的“模型应用”一键发布至企业工作台，企业员工可通过企业工作台登录页登录访问企业应用。</td>
+<td>2021-08</td>
+<td><a href="https://cloud.tencent.com/document/product/1301/59395">企业工作台</a></td>
+</tr>
+<tr>
+<td>新增流程管理</td>
+<td>微搭“流程管理”将一系列业务活动抽象为不同类型的“流程节点”，通过流程编辑器进行连接，用户可根据业务需求，通过不同类型节点的组合绘制流程，最终实现标准重复性的任务由自动化代替人工操作，提高业务执行效率。
+</td>
+<td>2021-08</td>
+<td><a href="https://cloud.tencent.com/document/product/1301/59394">流程管理</a><br>
+<a href="https://cloud.tencent.com/document/product/1301/59393">创建流程</a>
+</td>
+</tr>
+<tr>
+<td>新增用户权限</td>
+<td>微搭新增用户权限管理功能，管控不同用户可以访问的应用、查看的页面、参与的审批流程以及可以操作数据的范围。</td>
+<td>2021-08</td>
+<td><a href="https://cloud.tencent.com/document/product/1301/59396">用户权限管理</a></td>
+</tr>
+</table>
+
+### 应用编辑器
+
+<table>
+<tr>
+<th width="20%">动态名称</th>
+<th width="50%">动态描述</th>
+<th width="15%">发布时间</th>
+<th width="15%">相关文档</th>
+</tr>
+<tbody>
+<tr>
+<td>新增模型应用</td>
+<td>利用模型应用，能通过选中数据源，就自动生成列表页、详情页、新建页和更新页，不需要额外的配置，功能就能正常使用。</td>
+<td>2021-08</td>
+<td><a href="https://cloud.tencent.com/document/product/1301/59391">模型应用</a></td>
+</tr>
+</table>
+
+### 数据源
+
+<table>
+<tr>
+<th width="20%">动态名称</th>
+<th width="50%">动态描述</th>
+<th width="15%">发布时间</th>
+<th width="15%">相关文档</th>
+</tr>
+<tbody>
+<tr>
+<td>新增数据源支持类型</td>
+<td>数据源新增图片、富文本字段类型。</td>
+<td>2021-08</td>
+<td>-</td>
+</tr>
+</table>
+
 ## 2021年06月
 ### 小程序
 
