--- a/product/视频服务/视频处理 MPS/产品简介/产品功能.md
+++ b/product/视频服务/视频处理 MPS/产品简介/产品功能.md
@@ -2,19 +2,19 @@
 
 ## 音视频转码
 转码是将原始音视频码流转换成另一个音视频码流的过程，是一种离线任务。通过转码，可以改变原始码流的编码格式、分辨率和码率等参数，从而适应不同终端和网络环境的播放。通过转码功能可以实现：
-- 适配更多终端：将原始视频转码成拥有更强的终端适配能力的格式（如 MP4），使视频资源能够在更多设备上播放。
-- 适配不同带宽：将视频转换成流畅、标清、高清及超清等输出，用户可以根据当前网络环境选择合适码率的视频播放。
-- 改善播放效率：转码可以将 MP4 位于尾部的元信息 MOOV 提前到头部，播放器无需下载完整视频即可立即播放。
-- 节省带宽：采用更先进的编码方式（如 H.265）转码，在不损失原始画质的情况下显著降低码率，节省播放带宽。
+- **适配更多终端**：将原始视频转码成拥有更强的终端适配能力的格式（如 MP4），使视频资源能够在更多设备上播放。
+- **适配不同带宽**：将视频转换成流畅、标清、高清及超清等输出，用户可以根据当前网络环境选择合适码率的视频播放。
+- **改善播放效率**：转码可以将 MP4 位于尾部的元信息 MOOV 提前到头部，播放器无需下载完整视频即可立即播放。
+- **节省带宽**：采用更先进的编码方式（如 H.265）转码，在不损失原始画质的情况下显著降低码率，节省播放带宽。
 
 
 转码的目标规格包含编码格式、分辨率和码率等参数。您可自定义以下转码相关参数。
 
 <table>
    <tr>
-      <th width="0px" style="text-align:center">参数</td>
-      <th width="0px" style="text-align:center">类型</td>
-      <th width="0px"  style="text-align:center">详细说明</td>
+      <th width="15%" style="text-align:center">参数</td>
+      <th width="17%" style="text-align:center">类型</td>
+      <th  style="text-align:center">详细说明</td>
    </tr>
    <tr>
       <td rowspan='3' style="text-align:center">输入格式</td>
@@ -62,11 +62,10 @@
 
 ## 水印
 添加水印是在视频转码或截图时，将特定的图片附加在画面指定位置的过程，是一种离线任务。视频处理支持以下类型的水印：
-- 静态图片水印：PNG 格式的图片水印，可以是版权方的 LOGO、台标等，常用于表明视频的版权归属。
-- 动态图片水印：APNG 格式的动态图片水印，可以实现水印图片动态变化的效果。
+- **静态图片水印**：PNG 格式的图片水印，可以是版权方的 LOGO、台标等，常用于表明视频的版权归属。
+- **动态图片水印**：APNG 格式的动态图片水印，可以实现水印图片动态变化的效果。
 
 视频处理支持为视频或截图添加多个水印，并可以指定各个水印在画面中的大小和位置。
-
 
 水印的目标规格包含水印类型、宽高和位置等参数。您可自定义以下水印相关参数。
 
@@ -83,17 +82,15 @@
 ## 视频截图
 
 截图是截取视频特定位置的图像并生成图片的过程，是一种离线任务。视频处理提供以下类型的截图：
-- 指定时间点截图：指定一组时间点，截取视频在这些时间点的图像。
-- 采样截图：按相同的时间间隔对视频截取多张图。
-- 截雪碧图：按相同的时间间隔对视频截取多张小图，然后组装成若干大图（即 [雪碧图](https://cloud.tencent.com/document/product/862/37710#1666)）。
-
+- **指定时间点截图**：指定一组时间点，截取视频在这些时间点的图像。
+- **采样截图**：按相同的时间间隔对视频截取多张图。
+- **截雪碧图**：按相同的时间间隔对视频截取多张小图，然后组装成若干大图（即 [雪碧图](https://cloud.tencent.com/document/product/862/37710#1666)）。
 
 截图的目标规格，包含了截图文件格式、截图宽高等参数。您可自定义以下截图相关参数。
 
 ### 时间点截图
 
-
-| 参数&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;     | 说明                                                         |
+| 参数     | 说明 |
 | -------------------- | ------------------------------------------------------------ |
 | 格式（Format）       | 截图文件的输出格式，目前仅支持 JPG                         |
 | 宽度（Width）        | 截图宽度，范围是128px - 4096px                             |
