--- a/product/计算与网络/专线接入/操作指南18-08-27/管理专线网关/专线网关概述.md
+++ b/product/计算与网络/专线接入/操作指南18-08-27/管理专线网关/专线网关概述.md
@@ -30,6 +30,7 @@
 - 若专用通道为 BGP 模式，IDC 到腾讯云 VPC 方向的路由目的网段，为本地路由器通过 BGP 协议学习到的 VPC CIDR（172.21.0.0/16）。
 <img width="80%" src="https://main.qcloudimg.com/raw/3d2431029fa6d04618757551d47c40d5.png" style="zoom:67%;" />
 
+
 ## 云联网专线网关
 一个云联网专线网关可以关联一个云联网和多个专用通道，实现云联网内的多个 VPC 与不同的 IDC 互联。在专线网络架构中，创建云联网专线网关的时间、专用通道的模式均对 IDC 到腾讯云 VPC 方向的路由目的网段有影响，具体如下表所示：
 <table>
@@ -65,3 +66,12 @@
 >?如果您的专线网关在 2020年9月15日零点前所创建，请提交 [工单申请 ](https://console.cloud.tencent.com/workorder/category)将专线网关对外发布路由规则更改为 VPC CIDR。
 >
 <img width="80%" src="https://main.qcloudimg.com/raw/c15dfe8607ef80ffc8b76d72365e6b1e.png" style="zoom:67%;" />
+
+
+## 高可用概述[](id:dc-dsr)
+DSR（Disaggregated Software-Defined Router，面向大规模云网络服务的分布式路由系统），是腾讯基于 SDN、NFV 和微服务技术自助研发的新一代软件路由系统，用于替代传统的商业路由器，广泛部署的腾讯超大规模、高性能、高弹性的云网络系统。
+ 腾讯云专线继承了腾讯云 DSR 高可用特性，在腾讯云侧2个边界 IP 地址分别作用于两个不同的 DSR 集群上，这样 IDC 侧本地路由器通过 BGP 协议分别与两个 DSR 集群分别建立了 BGP 邻居关系，有效的保证了 DSR 集群升级或者单集群故障时业务的高可用，避免因单 BGP 邻居中断导致路由收敛而对业务产生的影响。 
+![](https://main.qcloudimg.com/raw/e1223de6586b26115d721c55245544f5.png)
+
+1. 腾讯云侧：DSR 通过 BGP 协议学习腾讯云到用户 IDC 的路由，下一跳为用户本地路由器。
+2. 用户 IDC 侧：用户本地路由器通过 BGP 协议学习 IDC 到腾讯云 VPC 的路由，下一跳为 2个 DSR 集群的 IP 地址。
