--- a/product/安全服务/威胁情报云查服务/产品简介/产品概述.md
+++ b/product/安全服务/威胁情报云查服务/产品简介/产品概述.md
@@ -1,31 +1,33 @@
 ## 背景
-网络空间的攻防是一场“非对称”的战争。高级持续性威胁（Advanced Persistent Threat，APT）等 新型攻击层出不穷，攻击者拥有较长的准备时间、丰富的攻击工具和较低的攻击成本。传统的安全防护多数依赖边界或特殊节点部署像防火墙等安全设备的静态防御，实行以特征检测为主的安全监控，并基于规则匹配产生告警。然而面对各类新型威胁，传统的安全防御方式显得愈发捉襟见肘。
+网络空间的攻防是一场“非对称”的战争。高级持续性威胁（Advanced Persistent Threat，APT）等新型攻击层出不穷，攻击者拥有较长的准备时间、丰富的攻击工具和较低的攻击成本。传统的安全防护多数依赖边界或特殊节点部署像防火墙等安全设备的静态防御，实行以特征检测为主的安全监控，并基于规则匹配产生告警。然而面对各类新型威胁，传统的安全防御方式显得愈发捉襟见肘。
 
 ## 什么是威胁情报云查服务
 腾讯威胁情报云查服务依托腾讯近二十年的网络安全经验和大数据情报，为客户提供威胁情报（IoC）查询服务和 IP/Domain/文件等信誉查询服务，帮助企业以最低的成本使用专业的威胁情报服务并提升现有安全防御能力。通过对外提供如下7种类型 API 接口服务实现上述功能。
+
 
 
 ### IP 入站（WAF 查询）情报
 依赖于腾讯游戏，社交等全系列业务安全数据积累，提供机器人概率，攻击属性等标签，目前每日攻击信息大概500W，高概率机器人 IP 大概2亿，高概率真人大概4亿。
 
 ### IP 信誉情报
-开源情报或者相关报告出现过的 IP，以及在腾讯沙箱库出现较多恶意样本连接或者下载过恶意样本的IP，可作为告警收敛或者关联分析，情报生产的参考特征，不建议直接拦截。
+开源情报或者相关报告出现过的 IP，以及在腾讯沙箱库中出现较多恶意样本连接或者下载过恶意样本的IP，可作为告警收敛或者关联分析，情报生产的参考特征，不建议直接拦截。
 
 
 ### IP 高精准查询（SOC）情报  
-APT 攻击、蠕虫木马、僵尸网络、勒索软件等的远控服务器地址情报数据库，可以用来匹配 DNS、HTTP 日志中的域名，用来发现失陷主机及系统升级服务，每天1次更新。
+APT 攻击、蠕虫木马、僵尸网络、勒索软件等远控服务器地址情报数据库，可以匹配 DNS、HTTP 日志中的域名，用来发现失陷主机及系统升级服务，每天更新1次。
 
-### IP画像情报
-IP对应的网络位置和网络行为的刻画， 包括是否是真实用户，服务器，VPS，IDC，VPN，CDN，云服务商，Web服务器，DNS服务器以及历史上是否存在攻击行为等多种画像的刻画，主要用于协助运营人员对WAF结果判定提供基础数据支撑，目前数据量级约6亿。
+### IP 画像情报
+- 对 IP 所对应的网络位置和网络行为进行刻画， 包括是否是真实用户、服务器、VPS、IDC、VPN、CDN，云服务商和 Web 服务器等信息。
+- 对 DNS 服务器以及历史上是否存在攻击行为等多种画像进行刻画，主要用于协助运营人员对 WAF 结果的判定，提供基础数据支撑，目前数据量级约6亿。
 
 ### 域名信誉情报
 开源情报或者相关报告出现过的域名，以及在腾讯沙箱库出现较多恶意样本链接，下载过恶意样本的域名，可作为告警收敛或者关联分析，情报生产的参考特征，不建议直接拦截。
 
 ### 文件信誉情报 
-提供基于文件MD5的查询接口，历史出现过的hash大概1500亿，有文件存储的大概150亿，黑的40亿， 白的20亿， 灰的90亿， 首次包含近半年的活跃情报（1亿+），后续每日增量文件。
+提供基于文件 MD5 的查询接口，历史出现过的 hash 大概1500亿，有文件存储的大概150亿，黑的40亿， 白的20亿， 灰的90亿， 首次包含近半年的活跃情报（1亿+），后续每日增量文件。
 
 ### URL 信誉情报
-腾讯范围内对URL内容进行检测后的累积的情报，累积10亿+，一般提供最近半年的情报，大约1亿黑URL。腾讯云威胁情报云查服务，为您提供以下价值：
+为腾讯安全范围内对 URL 内容进行检测后累积的情报，目前已累积10亿+，一般为用户提供最近半年的情报，大约1亿黑URL。腾讯云威胁情报云查服务，为您提供以下价值：
 - 对内部资产进行失陷检测和威胁发现；
 - 对内部安全管理中心或安全设备的日志进行告警收敛和关联分析；
 - 对公网开放的应用或服务的对外访问 IP 进行风险识别和信誉决策；
