--- a/product/域名与网站/网站备案/备案资料填写流程/PC 端备案/注销主体.md
+++ b/product/域名与网站/网站备案/备案资料填写流程/PC 端备案/注销主体.md
@@ -10,15 +10,15 @@
 
 ###  步骤1：提交注销主体申请
 1. 请登录 [腾讯云网站备案控制台](https://console.cloud.tencent.com/beian)，进入**备案管理**页面。
-2. 单击主体信息右上方的【注销备案】，进入办理流程。如下图所示：
+2. 单击主体信息右上方的**注销备案**，进入办理流程。如下图所示：
 ![](https://main.qcloudimg.com/raw/a63c74817eb7dc961e028d449f7a421a.png)
-3. 在弹出的 “注销备案说明” 的窗口中，阅读注意事项，并单击【下一步】。如下图所示：
+3. 在弹出的 “注销备案说明” 的窗口中，阅读注意事项，并单击**下一步**。如下图所示：
 ![](https://main.qcloudimg.com/raw/e8d4494774de3110cce2016dd5bb858e.png)
 
 ### 步骤2：注销备案确认
-1. 确认注销主体备案号、单位名称以及联系方式，单击【获取验证码】并输入验证码。如下图所示：
+1. 确认注销主体备案号、单位名称以及联系方式，单击**获取验证码**并输入验证码。如下图所示：
 ![](https://main.qcloudimg.com/raw/dc24857aad267c1620495d3bc011fb99.png)
-2. 单击【确认】，即可进入短信核验步骤。
+2. 单击**确认**，即可进入短信核验步骤。
 
 ### 步骤3：短信核验
 根据工信部最新要求，自2020年8月17日起，各省市进行备案申请时需通过 [工信部备案管理系统](https://beian.miit.gov.cn/) 进行短信核验，详情请查看 [备案短信核验说明](https://cloud.tencent.com/document/product/243/13435)。
