--- a/product/域名与网站/网站备案/备案资料填写流程/PC 端备案/注销网站.md
+++ b/product/域名与网站/网站备案/备案资料填写流程/PC 端备案/注销网站.md
@@ -8,19 +8,19 @@
 ### 步骤1：提交注销网站申请
 
 1. 请登录 [腾讯云网站备案控制台](https://console.cloud.tencent.com/beian)，进入**备案管理**页面。
-2. 选择需要注销的网站，单击【更多】>【注销网站】。如下图所示：
+2. 选择需要注销的网站，单击**更多 > 注销网站**。如下图所示：
 >! 若您有其他订单正在进行中，则不能进行注销网站操作。
 >
 ![](https://main.qcloudimg.com/raw/07025f720f5205cde653f5a190a5df70.png)
-3. 在弹出的 “注销网站说明” 的窗口中，阅读注意事项，并单击【下一步】。如下图所示：
+3. 在弹出的 “注销网站说明” 的窗口中，阅读注意事项，并单击**下一步**。如下图所示：
 ![](https://main.qcloudimg.com/raw/de7835fd29d2e389b65ec582bb097abc.png)
 
 
 
 ### 步骤2：注销网站确认
-1. 确认注销网站备案号、负责人姓名、网站名称、网站首页以及联系方式，单击【获取验证码】并输入验证码。如下图所示：
+1. 确认注销网站备案号、负责人姓名、网站名称、网站首页以及联系方式，单击**获取验证码**并输入验证码。如下图所示：
 ![](https://main.qcloudimg.com/raw/8127a476b90ce2a25b5b4a846a3f81e5.png)
-2. 单击【确认】，即可进入短信核验步骤。
+2. 单击**确认**，即可进入短信核验步骤。
 >?注销网站管局审核一般3 - 5个工作日，请您耐心等待管局审核。成功办理注销网站之后，腾讯云会以短信和电子邮件的形式通知您，请注意查收。
 
 ### 步骤2：短信核验
