--- a/product/域名与网站/网站备案/备案资料填写流程/PC 端备案/取消接入网站.md
+++ b/product/域名与网站/网站备案/备案资料填写流程/PC 端备案/取消接入网站.md
@@ -9,17 +9,17 @@
 ### 步骤1：提交取消接入申请
 
 1. 请登录 [腾讯云网站备案控制台](https://console.cloud.tencent.com/beian)。
-2. 选择需要取消接入的网站，单击【更多】>【取消接入】。如下图所示：
+2. 选择需要取消接入的网站，单击**更多 > 取消接入**。如下图所示：
 ![](https://main.qcloudimg.com/raw/adf9c0e81c39b6b9759094658c744661.png)
-3. 在弹出的 “取消接入说明” 的窗口中，阅读注意事项，并单击【下一步】。如下图所示：
+3. 在弹出的 “取消接入说明” 的窗口中，阅读注意事项，并单击**下一步**。如下图所示：
 ![](https://main.qcloudimg.com/raw/97d4509661c836aea3e0ceff237384b8.png)
 
 
 
 ### 步骤2：取消接入确认
-1. 确认注销网站备案号、负责人姓名、网站名称、网站首页以及联系方式，单击【获取验证码】并输入验证码。如下图所示：
+1. 确认注销网站备案号、负责人姓名、网站名称、网站首页以及联系方式，单击**获取验证码**并输入验证码。如下图所示：
 ![](https://main.qcloudimg.com/raw/87a9f2ab7b85188f0cc8eb9b69dbad75.png)
-2. 单击【确认】，即可进入短信核验步骤。
+2. 单击**确认**，即可进入短信核验步骤。
 >?取消接入管局审核一般3 - 5个工作日，请您耐心等待管局审核。成功办理取消接入网站之后，腾讯云会以短信和电子邮件的形式通知您，请注意查收。
 
 ### 步骤3：短信核验
