--- a/product/数据库/云数据库MySQL/常见问题/连接登录问题/连接登录问题.md
+++ b/product/数据库/云数据库MySQL/常见问题/连接登录问题/连接登录问题.md
@@ -46,7 +46,7 @@
 ### 我的云服务器 CVM 和云数据库 MySQL 在同一个地域下的不同可用区（如 CVM 在上海二区，MySQL 在上海一区），可以使用内网连接吗？
 云服务器和云数据库 MySQL在同一个地域，不一定是同一个私有网络，也有可能是不同的私有网络。
 - 若是同一私有网络的不同可用区，则可以使用内网互联。
-- 若不是同一私有网络（如云数据库在 VPC1，云数据库在 VPC2），则无法直接内网互联，解决方案请参见 [私有网络不同](https://cloud.tencent.com/document/product/236/44754#cmvbt)。
+- 若不是同一私有网络（如云数据库在 VPC1，云数据库在 VPC2），则无法直接内网互联，解决方案请参见 [不同私有网络间的互通](https://cloud.tencent.com/document/product/236/44754#cmvbt)。
 
 ### 不同账号下的云服务器 CVM 和云数据库 MySQL ，可以直接内网连接吗？
 不可以直接内网连接，但您可以使用 [云联网](https://cloud.tencent.com/document/product/877) 来实现跨账号内网连接。
