--- a/product/存储与CDN/对象存储 4.0/SDK文档/Java SDK/对象操作.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/Java SDK/对象操作.md
@@ -43,7 +43,8 @@
 public ObjectListing listObjects(ListObjectsRequest listObjectsRequest) throws CosClientException, CosServiceException;
 ```
 
->! 在 COS 中，列出的对象键为 project/，表示是一个内容为空的对象，展示方式上模拟了传统文件夹。相关介绍可参见[文件夹和目录](https://cloud.tencent.com/document/product/436/13324#.E6.96.87.E4.BB.B6.E5.A4.B9.E5.92.8C.E7.9B.AE.E5.BD.95)。
+>! 在 COS 中，列出的对象键为 project/，表示是一个内容为空的对象，展示方式上模拟了传统文件夹。相关介绍可参见 [文件夹和目录](https://cloud.tencent.com/document/product/436/13324#.E6.96.87.E4.BB.B6.E5.A4.B9.E5.92.8C.E7.9B.AE.E5.BD.95)。
+>
 
 #### 请求示例
 
@@ -474,7 +475,7 @@ try {
 
 AppendObjectRequest 成员说明：
 
-| Request 成员 | 设置方法   | 描述                                                         | 类型   | 必填 |
+| Request 成员 | 设置方法   | 描述                                                         | 类型   | 是否必填 |
 | ------------ | ------------------- | ------------------------------------------------------------ | -------------- |---|
 | bucketName   | 构造函数或 set 方法 | Bucket 的命名格式为 BucketName-APPID，详情请参见 [命名规范](https://cloud.tencent.com/document/product/436/13312#.E5.AD.98.E5.82.A8.E6.A1.B6.E5.91.BD.E5.90.8D.E8.A7.84.E8.8C.83) | String         | 是|
 | key          | 构造函数或 set 方法 | 对象键（Key）是对象在存储桶中的唯一标识。<br>例如，在对象的访问域名`examplebucket-1250000000.cos.ap-guangzhou.myqcloud.com/doc/picture.jpg`中，对象键为 doc/picture.jpg，详情请参见 [对象键](https://cloud.tencent.com/document/product/436/13324) | String         | 是|
