--- a/product/安全服务/数字身份管控平台公众版/操作指南/认证管理/账号密码认证.md
+++ b/product/安全服务/数字身份管控平台公众版/操作指南/认证管理/账号密码认证.md
@@ -3,7 +3,7 @@
 
 ## 操作步骤
 ### 新建认证源
-1. 登录 [数字身份管控平台（公共版）控制台](https://console.cloud.tencent.com/ciam)，在左侧导航栏，选择【认证管理】>【通用认证源】,进入通用认证源页面。
+1. 登录 [数字身份管控平台（公众版）控制台](https://console.cloud.tencent.com/ciam)，在左侧导航栏，选择【认证管理】>【通用认证源】,进入通用认证源页面。
 2. 在通用认证源页面，单击【新建认证源】，进入新建认证源页面。
 ![](https://main.qcloudimg.com/raw/cac93cbfd835e939665b4d3b450d5bfc.png)
 3. 在新建认证源页面，选择账号密码认证，单击【下一步】。
@@ -38,7 +38,7 @@
 ![](https://main.qcloudimg.com/raw/9cebb424018896f2abe05ac6033a499e.png)
 
 ### 编辑认证源
-1. 登录 [数字身份管控平台（公共版）控制台](https://console.cloud.tencent.com/ciam)，在左侧导航栏，选择【认证管理】>【通用认证源】,进入通用认证源页面。
+1. 登录 [数字身份管控平台（公众版）控制台](https://console.cloud.tencent.com/ciam)，在左侧导航栏，选择【认证管理】>【通用认证源】,进入通用认证源页面。
 2. 在通用认证源页面，单击【编辑】，进入编辑账号密码认证的基本信息页面。
 ![](https://main.qcloudimg.com/raw/56fb09106bd31edd1b37b9fb9e09631c.png)
 3. 在基本信息页面，根据需求修改基本信息，单击【确定】，即可修改基本信息。
