--- a/product/教育/企业直播/接入指引.md
+++ b/product/教育/企业直播/接入指引.md
@@ -1,9 +1,9 @@
 ### 步骤1：登录管理控制台
-通过手机号获取验证码，登录 [企业直播管理控制台](https://mc.tencent.com/pVywFYRp)。
+通过手机号获取验证码，登录 [私域直播管理控制台](https://mc.tencent.com/pVywFYRp)。
 ![](https://main.qcloudimg.com/raw/cc9143ca66bb7c8165080812626e2f32.png)
 
 ### 步骤2：开通试用版店铺
-在账号主页，单击【创建企业直播】，并输入企业直播名称，输入完成后，单击【开始创建】，企业直播创建完成，试用版店铺只有七天试用期。
+在账号主页，单击【创建私域直播】，并输入私域直播名称，输入完成后，单击【开始创建】，私域直播创建完成，试用版店铺只有七天试用期。
 ![](https://main.qcloudimg.com/raw/b442e077733acfc257081204f66ab195.png)
 
 ### 步骤3：订购正式版服务
