--- a/product/存储与CDN/对象存储 4.0/控制台管理V5/数据处理/设置视频审核.md
+++ b/product/存储与CDN/对象存储 4.0/控制台管理V5/数据处理/设置视频审核.md
@@ -7,7 +7,7 @@
 >!
 > - 视频审核功能基于**视频截帧**技术，通过对所截图片进行审核的方式实现此功能。开启视频审核时您可选择截帧方式，详情请查看下方操作步骤。
 > - 视频审核是付费服务，由数据万象收取，数据万象提供每日2000次的**免费鉴图额度**，未用完的额度不累计至下一天，计费系统会扣除免费的2000次（免费额度优先抵扣 [确定部分](#1) 的次数），详细的计费说明请参见 [内容审核费用](https://cloud.tencent.com/document/product/436/58965)。
-> - 当前视频审核的视频限制为：视频格式支持 mp4、avi、mkv、wmv、rmvb、flv、m3u8、mov、m4v、3gp，视频大小不能超过5GB，截帧数不能超过10万帧。
+>- 当前视频审核的视频限制为：视频格式支持 mp4、avi、mkv、wmv、rmvb、flv、m3u8、mov、m4v、3gp，视频大小不能超过5GB，截帧数不能超过1万帧。
 > 
 
 
@@ -33,7 +33,7 @@
 >
  - **敏感文件冻结**：您可以开启敏感文件冻结服务，开启后将授权数据万象对相应类型文件进行自动机审冻结或人工审核冻结，从而禁止公有读访问检测出的违规内容。开启服务后，您需要选择冻结类型。
  - **冻结类型**：您可指定冻结类型，同时选择冻结机制。默认选择机审自动冻结，若您选择人工审核冻结，则天御专业团队将会对机审结果为敏感的视频进行二次复检。
->! 人工审核冻结价格为700元/万次，详情请查看 [内容审核费用](https://cloud.tencent.com/document/product/436/58965)。
+>! 人工审核冻结价格为70元/千次，详情请查看 [内容审核费用](https://cloud.tencent.com/document/product/436/58965)。
 >
  - **回调设置**：开启回调后将把相应视频的审核结果反馈给您。您需选择回调的审核类型、回调内容，同时设置回调 URL。回调详情请查看 [回调内容](#2)。
 4. 配置完成后，单击【保存】即可启用该功能。后续将对您新上传的视频文件进行审核。
