--- a/product/计算与网络/共享流量包/产品简介/产品概述.md
+++ b/product/计算与网络/共享流量包/产品简介/产品概述.md
@@ -9,7 +9,7 @@
 使用共享流量包后，您在该地域下的所有公网网络计费模式为按流量计费的云服务器、弹性公网 IP、弹性公网 IPv6、负载均衡和 NAT 网关都可以通过共享流量包进行优惠扣费，更省成本。
 ![](https://main.qcloudimg.com/raw/4e360fa49ff5e3ce0f88333691f1f659.png)
 
-## 产品类型
+## 产品类型[](id:product-type)
 共享流量包分为全时流量包和闲时流量包，闲时流量包价格更低更优惠：
 - 全时流量包可用时间：全天。
 - 闲时流量包可用时间：该地域时间的0:00-8:00时间段，其余时间不生效无法使用。
@@ -17,7 +17,6 @@
 >
 
 ## 支持资源
-
 共享流量包支持如下资源：
 - [云服务器](https://cloud.tencent.com/document/product/213)
 - [弹性公网 IP](https://cloud.tencent.com/document/product/1199)
