--- a/product/监控与管理/前端性能监控/常见问题/技术排查相关问题.md
+++ b/product/监控与管理/前端性能监控/常见问题/技术排查相关问题.md
@@ -1,8 +1,8 @@
-(id:que1)
-### 代码中 `throw new Error` Aegis SDK 没有捕获到，如何处理？[]
+[](id:que1)
+### 代码中 `throw new Error` Aegis SDK 没有捕获到，如何处理？
 在 VUE 框架中，Vue.config.errorHandler 会主动捕获错误，可以通过主动捕获再调用 aegis.error() 进行上报
 
-[](id:que2)
+
 ### 接口请求报错 403 要怎么处理？
 
 接口403一般是因为页面域名校验失败导致的，可以检查项目创建时候设置的域名跟实际上报的域名是否一致。如果项目不需要校验，域名可以填 `*`。
