--- a/product/大数据与AI/弹性MapReduce/操作指南/管理集群/集群恢复.md
+++ b/product/大数据与AI/弹性MapReduce/操作指南/管理集群/集群恢复.md
@@ -12,13 +12,13 @@
 >- 隔离状态续费恢复集群完成后，6小时不能再次销毁集群。
 >- 监控数据会缺失隔离中至集群恢复前的所有监控数据。
 
-1. 登录 [弹性 MapReduce 控制台](https://console.cloud.tencent.com/emr) 在集群列表中选择需要恢复的集群，选择【管理】>【续费】进行续费。
+1. 登录 [弹性 MapReduce 控制台](https://console.cloud.tencent.com/emr) 在集群列表中选择需要恢复的集群，选择**管理 > 续费**进行续费。
 ![](https://main.qcloudimg.com/raw/39723e8eb81a2d21d5e5e064951ec7c9.png)
-2. 当集群中含有 MetaDB，需先前往云数据库控制台对 MetaDB 进行恢复，单击【前往续费】。
+2. 当集群中含有 MetaDB，需先前往云数据库控制台对 MetaDB 进行恢复，单击**前往续费**。
  ![](https://main.qcloudimg.com/raw/6d478beabf47c19e791956cee625c8e4.png)
-3. 在 [云数据库 TencentDB 控制台](https://console.cloud.tencent.com/cdb) 中对已选择的隔离中的数据库实例单击【恢复】进行续费恢复。
+3. 在 [云数据库 TencentDB 控制台](https://console.cloud.tencent.com/cdb) 中对已选择的隔离中的数据库实例单击**恢复**进行续费恢复。
 ![](https://main.qcloudimg.com/raw/4f066a1860fad1d1865a6a65e90bb5a8.png)
-4. 若集群中不含有 MetaDB 或含有 MetaDB 已续费恢复后，在弹性 MapReduce 控制台对应集群单击【续费】，对集群中所有包月节点进行续费恢复。
+4. 若集群中不含有 MetaDB 或含有 MetaDB 已续费恢复后，在弹性 MapReduce 控制台对应集群单击**续费**，对集群中所有包月节点进行续费恢复。
  ![](https://main.qcloudimg.com/raw/be0b34fa514ef435edafe03e8fdf8f96.png)
 
 
